# Equestrian_Management

./: .gitignore  README.md  agecategories.txt  horse_show.db  pyproject.toml  requirements.txt  structure.txt
src/: config.py
src/cli/: main.py
src/core/: models.py  services.py
src/data/: database.py
src/web/: app.py
src/web/templates/: base.html  list.html  register.html  score.html
