[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equestrian-management"
version = "0.1.0"
description = "Equestrian Management System"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.cfg", "*.json"]